.workloadConfig/site/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: resume-service
spec:
  selector:
    #+operator-builder:collection:field:name="firstName",type=string,default="John",replace="john"
    #+operator-builder:collection:field:name="lastName",type=string,default="Doe",replace="doe"
    resume.jefedavis.dev/candidate: johndoe
  ports:
    - port: 8080
      targetPort: 1313
